--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,7 +20,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: Shanghai Weather Report
+          subject: Hangzhou Weather Report
           body: file://result.html
           to: 200684796@qq.com
           from: GitHub Actions
